# slicer-issue-examples

./: README.md  README.md~
extension_dependency/DependentExtension/: CMakeLists.txt  CMakeLists.txt~  qSlicerDependentExtensionModule.cxx  qSlicerDependentExtensionModule.h  qSlicerDependentExtensionModuleWidget.cxx  qSlicerDependentExtensionModuleWidget.cxx~  qSlicerDependentExtensionModuleWidget.h
extension_dependency/DependentExtension/Documentation/: DependentExtension.dox
extension_dependency/DependentExtension/Logic/: vtkSlicerDependentExtensionLogic.cxx  vtkSlicerDependentExtensionLogic.h
extension_dependency/DependentExtension/Resources/: qSlicerDependentExtensionModule.qrc
extension_dependency/DependentExtension/Resources/UI/: qSlicerDependentExtensionModule.ui
extension_dependency/DependentExtension/Widgets/: qSlicerFooBarWidget.cxx  qSlicerFooBarWidget.h
extension_dependency/IndependentExtension/: CMakeLists.txt  CMakeLists.txt~  qSlicerIndependentExtensionModule.cxx  qSlicerIndependentExtensionModule.h  qSlicerIndependentExtensionModuleWidget.cxx  qSlicerIndependentExtensionModuleWidget.h
extension_dependency/IndependentExtension/Documentation/: IndependentExtension.dox
extension_dependency/IndependentExtension/Logic/: vtkSlicerIndependentExtensionLogic.cxx  vtkSlicerIndependentExtensionLogic.h
extension_dependency/IndependentExtension/Resources/: qSlicerIndependentExtensionModule.qrc
extension_dependency/IndependentExtension/Resources/UI/: qSlicerIndependentExtensionModule.ui
extension_dependency/IndependentExtension/Widgets/: qSlicerFooBarWidget.cxx  qSlicerFooBarWidget.h
